generated-tests/tests/snapshots/ts/typescript__test_generated_assignment_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
x1 = y1

AST:
(program
  (expression_statement
    (assignment_expression
      (identifier x1)
      (identifier y1)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
