generated-tests/tests/snapshots/ts/typescript__test_generated_default_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type Test<T1 = string> = T1; const value6: Test = 'default';

AST:
(program
  (type_alias_declaration
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier)
        (default_type
          (predefined_type)
        )
      )
    )
    (type_identifier)
  )
  (lexical_declaration
    (variable_declarator
      (identifier value6)
      (type_annotation
        (type_identifier)
      )
      (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Test",
            line_number: 1,
            definition_type: TypeDefinition,
            scope: None,
        },
        Definition {
            name: "value6",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
