generated-tests/tests/snapshots/ts/typescript__test_generated_export_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
export const exported = value7;

AST:
(program
  (export_statement
    (lexical_declaration
      (variable_declarator
        (identifier exported)
        (identifier value7)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "exported",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "exported",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 14,
            end_line: 1,
            end_column: 22,
        },
        SerializableUsage {
            name: "value7",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 25,
            end_line: 1,
            end_column: 31,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
